# swift

swiftcpp/: .gitignore  Package.swift  README.md
swiftcpp/BidirectionalCxxInterop/: CMakeLists.txt
swiftcpp/CppInteroperability/: CMakeLists.txt  README.md
swiftcpp/CppInteroperability/Sources/CxxInterop/: main.swift
swiftcpp/CppInteroperability/Sources/CxxTest/: CxxTest.cpp  CxxTest.hpp  module.modulemap  objc_code.h  objc_code.mm
swiftcpp/ExecutableLibrary/: CMakeLists.txt
swiftcpp/ExecutableLibrary/lib/: CMakeLists.txt  factorial.swift
swiftcpp/ExecutableLibrary/src/: CMakeLists.txt  main.swift
swiftcpp/SingleExecutable/: AppDelegate.swift  CMakeLists.txt  ContentView.swift  README.md  main.swift
swiftcpp/Sources/c-exec/: main.c
swiftcpp/Sources/clib/: hello.c
swiftcpp/Sources/clib/include/: hello.h
swiftcpp/Sources/cpp-exec/: main.cpp
swiftcpp/Sources/cpplib/: cpplib.cpp
swiftcpp/Sources/cpplib/include/: cpplib.h
swiftcpp/Sources/swift-exec/: main.swift
swiftcpp/Sources/swiftlib/: hello.swift
xmaketest/: xmake.lua
